kubernetes/traefik/dashboard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefikdashboardbasicauth
  namespace: default
spec:
  basicAuth:
    secret: traefikdashboardauth
