kubernetes/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefikdashboard
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefikexternal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.manly.dylangroff.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService
